# camera_calibration

./: .gitignore  .~lock.hs_left.csv#  Fernandez_HAR  Kinect_sdk_trial.py  README.md  T_base2gripper.npy  T_cam2world.npy  T_gripper2rs.npy  T_rs2gripper.npy  T_rs2gripper_0.npy  T_rs2gripper_1.npy  T_rs2gripper_2.npy  T_rs2gripper_3.npy  T_rs2gripper_4.npy  ZED_bodytracking_trial.py  cam_cal.py  check_ts.csv  compress_imgs.launch  create_transforms_.py  main.py  mediaPipeTrial.py  obtain_body_skeleton.py  obtain_hand_skeleton.py  open_pose_trial.py  plot_features.py  read_bags_skel.py  rtde_interf.py
camera_calibration/: ZED_TO_TGT_2023_11_24_17_22_8.npy  get_cam_transforms.py  main.py
camera_calibration/rs_transforms/: RS_TO_TGT_WP_10_rot_mat.npy  RS_TO_TGT_WP_10_t_vec.npy  RS_TO_TGT_WP_11_rot_mat.npy  RS_TO_TGT_WP_11_t_vec.npy  RS_TO_TGT_WP_12_rot_mat.npy  RS_TO_TGT_WP_12_t_vec.npy  RS_TO_TGT_WP_13_rot_mat.npy  RS_TO_TGT_WP_13_t_vec.npy  RS_TO_TGT_WP_14_rot_mat.npy  RS_TO_TGT_WP_14_t_vec.npy  RS_TO_TGT_WP_15_rot_mat.npy  RS_TO_TGT_WP_15_t_vec.npy  RS_TO_TGT_WP_16_rot_mat.npy  RS_TO_TGT_WP_16_t_vec.npy  RS_TO_TGT_WP_17_rot_mat.npy  RS_TO_TGT_WP_17_t_vec.npy  RS_TO_TGT_WP_18_rot_mat.npy  RS_TO_TGT_WP_18_t_vec.npy  RS_TO_TGT_WP_19_rot_mat.npy  RS_TO_TGT_WP_19_t_vec.npy  RS_TO_TGT_WP_1_rot_mat.npy  RS_TO_TGT_WP_1_t_vec.npy  RS_TO_TGT_WP_20_rot_mat.npy  RS_TO_TGT_WP_20_t_vec.npy  RS_TO_TGT_WP_2_rot_mat.npy  RS_TO_TGT_WP_2_t_vec.npy  RS_TO_TGT_WP_3_rot_mat.npy  RS_TO_TGT_WP_3_t_vec.npy  RS_TO_TGT_WP_4_rot_mat.npy  RS_TO_TGT_WP_4_t_vec.npy  RS_TO_TGT_WP_5_rot_mat.npy  RS_TO_TGT_WP_5_t_vec.npy  RS_TO_TGT_WP_6_rot_mat.npy  RS_TO_TGT_WP_6_t_vec.npy  RS_TO_TGT_WP_7_rot_mat.npy  RS_TO_TGT_WP_7_t_vec.npy  RS_TO_TGT_WP_8_rot_mat.npy  RS_TO_TGT_WP_8_t_vec.npy  RS_TO_TGT_WP_9_rot_mat.npy  RS_TO_TGT_WP_9_t_vec.npy
ee_t/: BASE_TO_EE_10_transform.npy  BASE_TO_EE_11_transform.npy  BASE_TO_EE_12_transform.npy  BASE_TO_EE_13_transform.npy  BASE_TO_EE_14_transform.npy  BASE_TO_EE_15_transform.npy  BASE_TO_EE_16_transform.npy  BASE_TO_EE_17_transform.npy  BASE_TO_EE_18_transform.npy  BASE_TO_EE_19_transform.npy  BASE_TO_EE_1_transform.npy  BASE_TO_EE_20_transform.npy  BASE_TO_EE_2_transform.npy  BASE_TO_EE_3_transform.npy  BASE_TO_EE_4_transform.npy  BASE_TO_EE_5_transform.npy  BASE_TO_EE_6_transform.npy  BASE_TO_EE_7_transform.npy  BASE_TO_EE_8_transform.npy  BASE_TO_EE_9_transform.npy
ee_transforms/: BASE_TO_EE_0_rot_mat.npy  BASE_TO_EE_0_t_vec.npy  BASE_TO_EE_10_rot_mat.npy  BASE_TO_EE_10_t_vec.npy  BASE_TO_EE_11_rot_mat.npy  BASE_TO_EE_11_t_vec.npy  BASE_TO_EE_12_rot_mat.npy  BASE_TO_EE_12_t_vec.npy  BASE_TO_EE_13_rot_mat.npy  BASE_TO_EE_13_t_vec.npy  BASE_TO_EE_14_rot_mat.npy  BASE_TO_EE_14_t_vec.npy  BASE_TO_EE_15_rot_mat.npy  BASE_TO_EE_15_t_vec.npy  BASE_TO_EE_16_rot_mat.npy  BASE_TO_EE_16_t_vec.npy  BASE_TO_EE_17_rot_mat.npy  BASE_TO_EE_17_t_vec.npy  BASE_TO_EE_18_rot_mat.npy  BASE_TO_EE_18_t_vec.npy  BASE_TO_EE_19_rot_mat.npy  BASE_TO_EE_19_t_vec.npy  BASE_TO_EE_1_rot_mat.npy  BASE_TO_EE_1_t_vec.npy  BASE_TO_EE_20_rot_mat.npy  BASE_TO_EE_20_t_vec.npy  BASE_TO_EE_2_rot_mat.npy  BASE_TO_EE_2_t_vec.npy  BASE_TO_EE_3_rot_mat.npy  BASE_TO_EE_3_t_vec.npy  BASE_TO_EE_4_rot_mat.npy  BASE_TO_EE_4_t_vec.npy  BASE_TO_EE_5_rot_mat.npy  BASE_TO_EE_5_t_vec.npy  BASE_TO_EE_6_rot_mat.npy  BASE_TO_EE_6_t_vec.npy  BASE_TO_EE_7_rot_mat.npy  BASE_TO_EE_7_t_vec.npy  BASE_TO_EE_8_rot_mat.npy  BASE_TO_EE_8_t_vec.npy  (+2 more)
rs_t/: RS_TO_TGT_10_transform.npy  RS_TO_TGT_11_transform.npy  RS_TO_TGT_12_transform.npy  RS_TO_TGT_13_transform.npy  RS_TO_TGT_14_transform.npy  RS_TO_TGT_15_transform.npy  RS_TO_TGT_16_transform.npy  RS_TO_TGT_17_transform.npy  RS_TO_TGT_18_transform.npy  RS_TO_TGT_19_transform.npy  RS_TO_TGT_1_transform.npy  RS_TO_TGT_20_transform.npy  RS_TO_TGT_2_transform.npy  RS_TO_TGT_3_transform.npy  RS_TO_TGT_4_transform.npy  RS_TO_TGT_5_transform.npy  RS_TO_TGT_6_transform.npy  RS_TO_TGT_7_transform.npy  RS_TO_TGT_8_transform.npy  RS_TO_TGT_9_transform.npy
rs_transforms/: RS_TO_TGT_0_rot_mat.npy  RS_TO_TGT_0_t_vec.npy  RS_TO_TGT_10_rot_mat.npy  RS_TO_TGT_10_t_vec.npy  RS_TO_TGT_11_rot_mat.npy  RS_TO_TGT_11_t_vec.npy  RS_TO_TGT_12_rot_mat.npy  RS_TO_TGT_12_t_vec.npy  RS_TO_TGT_13_rot_mat.npy  RS_TO_TGT_13_t_vec.npy  RS_TO_TGT_14_rot_mat.npy  RS_TO_TGT_14_t_vec.npy  RS_TO_TGT_15_rot_mat.npy  RS_TO_TGT_15_t_vec.npy  RS_TO_TGT_16_rot_mat.npy  RS_TO_TGT_16_t_vec.npy  RS_TO_TGT_17_rot_mat.npy  RS_TO_TGT_17_t_vec.npy  RS_TO_TGT_18_rot_mat.npy  RS_TO_TGT_18_t_vec.npy  RS_TO_TGT_19_rot_mat.npy  RS_TO_TGT_19_t_vec.npy  RS_TO_TGT_1_rot_mat.npy  RS_TO_TGT_1_t_vec.npy  RS_TO_TGT_20_rot_mat.npy  RS_TO_TGT_20_t_vec.npy  RS_TO_TGT_2_rot_mat.npy  RS_TO_TGT_2_t_vec.npy  RS_TO_TGT_3_rot_mat.npy  RS_TO_TGT_3_t_vec.npy  RS_TO_TGT_4_rot_mat.npy  RS_TO_TGT_4_t_vec.npy  RS_TO_TGT_5_rot_mat.npy  RS_TO_TGT_5_t_vec.npy  RS_TO_TGT_6_rot_mat.npy  RS_TO_TGT_6_t_vec.npy  RS_TO_TGT_7_rot_mat.npy  RS_TO_TGT_7_t_vec.npy  RS_TO_TGT_8_rot_mat.npy  RS_TO_TGT_8_t_vec.npy  (+2 more)
src/: CMakeLists.txt
src/freenect_trial/: CMakeLists.txt  opencv_freenect.cpp
ss. ur_waypoints/: c_points.txt  j_points.txt
test_transforms/: T_base2gripper_table.npy  T_base2gripper_wall.npy  T_cam2world_table.npy  T_cam2world_wall.npy
